@@ -16,7 +16,7 @@
 			<p><a href="/webgli/ClientConfig">Client Config</a></p>
 			<p><a href="/webgli/Partitioning">Partitioning</a></p>
 			<p><a href="/webgli/NetworkMounts">Network Mounts</a></p>
-			<p><a href="/webgli/Stage">Stage Selection</a></p>
+			<p><a href="/webgli/StageSelection">Stage Selection</a></p>
 			<p><a href="/webgli/PortageTree">Portage Tree</a></p>
 			<p><a href="/webgli/ConfigFiles">Config Files</a></p>
 			<p><a href="/webgli/Kernel">Kernel</a></p>
