@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.415 2005/10/12 02:02:51 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.416 2005/10/16 04:00:26 codeman Exp $
 
 *GLI-0.3 (5 Oct 2005)
+
+  16 Oct 2005; Preston Cody <codeman@gentoo.org>
+  more updates to webgli.  stage selection.
 
   11 Oct 2005; Preston Cody <codeman@gentoo.org>
   updated webgli with preliminary Network Mounts support.
